<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nested_height"
        android:background="@color/translucent_grey"
        android:padding="@dimen/list_padding"
        app:behavior_hideable="true"
        app:behavior_peekHeight="@dimen/bottomSheet_peekHeight"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblSheetTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lblSheetTitle_text"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/lblSheetTitle_textSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblSheetSynopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/lblSheet_notAvailable"
                android:layout_marginBottom="@dimen/sheet_margin_bottom"
                android:textSize="@dimen/lblSheetSynopsis_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblSheetTitle" />

            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="@dimen/close_button_size"
                android:layout_height="@dimen/close_button_size"
                android:src="@drawable/ic_close_white_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/imgCover_descr" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</layout>